# sport_monitoring

./: .gitignore  README.md  pyproject.toml
benchmark/: labels.csv
demo_web/: .gitignore  README.md  app.py  bridge.py
docs/: INJURY_ANALYSIS.md
scripts/: diagnose_tracking.py  evaluate.py
src/sport_monitoring/: __init__.py  cli.py  config.py  pipeline.py  sport_bytetrack.yaml  video.py
src/sport_monitoring/analysis/: __init__.py  biomechanics.py  fall.py  landing.py  risk.py
src/sport_monitoring/perception/: __init__.py  backbones.py  detector.py  detector_rfdetr.py  pose_mediapipe.py  rtm_pose.py
src/sport_monitoring/render/: __init__.py  visualize.py
src/sport_monitoring/tracking/: __init__.py  color_id.py  identity.py  selector.py  tracker.py
